cabal-version:      3.0
name:               99haskel
version:            0.1.0.0
build-type:         Simple

executable list-again
    main-is:          list-again.hs
    build-depends:    base, random
    default-language: Haskell2010

executable list-cont
    main-is:          list-cont.hs
    build-depends:    base, random
    default-language: Haskell2010

executable list
    main-is:          list.hs
    build-depends:    base, random
    default-language: Haskell2010